static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');



body {
    background-color: #F9FAFC;

}

.brand {
    font-family: Helvetica, sans-serif;
    font-size: 1.4rem;
    font-weight: 700;
    color: #000000;
}

.red-o {
    color: #E84610;
}

.thin {
    font-weight: 300;
}

.black-bg {
    background-color: #000000;
}
.light-bg {
    background-color: #fff;
}

.dark-bg {
    background-color: #445261;
}

.main-bg {
    background-color: #F9FAFC;
}

.card {
    border: none;
    background-color: transparent;
}

.card-title {
    font-family: Helvetica, sans-serif;
    font-weight: 550;
}

.monofont {
    font-family: "IBM Plex Mono", sans-serif;
}

.card-text {
    font-family: "IBM Plex Mono", sans-serif;
}


/* Styling for recipe cards, made css stop working */

.card-img-top {
    object-fit: cover;
    height: 20vw;
    min-height: 200px;
}

.image-container {
    position: relative;
}

.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #000000;
}

.author {
    font-family:'IBM Plex Mono', sans-serif;
    color: white;
    margin: 4px;
    text-transform: lowercase;
}

.masthead {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
}

.masthead-text {
    background-color: #445261;
    color: white;
    position: relative;
}

.masthead-image {
    position: relative;
    overflow: hidden;
}

.masthead-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: #445261;
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}
.nav-item {
    font-family: Helvetica, sans-serif;
    font-weight: 600;
    text-transform: lowercase;
}

.navbar-text {
    font-family: Helvetica, sans-serif;
    font-weight: 500;
    text-transform: lowercase;
}
.post-link {
    text-decoration: none;
    color: #445261;
}

.post-link:hover,
.page-link {
    color: #e0c56e;
}

.post-title {
    margin-top: 5%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.btn-signup {
    background-color: #e0c56e;
    color: #fff;
    margin-bottom: 1.3em;
    
}

.btn-signup:hover,
.btn-signup:active {
    background-color: #fff;
    color: #e0c56e;
}

.link {
    color: #23BBBB;
    text-decoration: none;
}

.link:hover,
.link:active {
    color: #445261;
    text-decoration: underline;
}

.btn-like {
    color: #d4af37;
    border: none;
    background: transparent;
}

.btn-unliked {
    color: #6C757D;
    border: none;
    background: transparent;
}

.btn-unliked:hover,
.btn-unliked:active {
    color: #d4af37;
    background: transparent;
    border: none;
}

.btn-like:hover,
.btn-like:active {
    color: #6C757D;
    background: transparent;
    border: none;
}

/* button danger styling */

.btn-danger {
    background-color: #BC002D;
}

.btn-danger:hover {
    background-color: #fff;
    color: #BC002D;
}


.btn-secondary {
    background-color: #000000;
}

/* hero image
    position: absolute;
    bottom: 15px;
*/

.hero {
    min-height: 70vh;
    background: #000 url("https://res.cloudinary.com/hoori/image/upload/v1659130547/harvest-_igi0gc.jpg") center center no-repeat;
    background-size: cover;
    position: relative;
    display: flex;
    align-items: center;
  }
  /*
  .hero:before {
    content:"";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(to top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
  }
  */
  .hero-content {
    color: #fff;

  }

h3 {
    font-family: "IBM Plex Mono", sans-serif;
}

p {
    font-family: "IBM Plex Mono", sans-serif;
}

.heroshadow {
    text-shadow: 2px 2px black;
}

